[package]
name = "thirtyfour_download_file_2"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11.5"
log = "0.4.22"
rustfmt = "0.10.0"
thirtyfour = "0.33.0"
tokio = { version = "1.39.2", features = [
    "fs",
    "macros",
    "rt-multi-thread",
    "io-util",
    "sync",
    "time",
] }
# tokio = { version = "1.39.2", features = ["full"] }
# https://github.com/stevepryde/thirtyfour/blob/main/thirtyfour/Cargo.toml
